samples/_failures_safe/1761502508_470dc4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_186cce40.c: In function ‘main’:
./samples/SAFE/__tmp_186cce40.c:146:13: error: expected expression at end of input
  146 |             volatile int computation =
      |             ^~~~~~~~
./samples/SAFE/__tmp_186cce40.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_186cce40.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_186cce40.c:146:13: error: expected declaration or statement at end of input
